<resources>
    <string name="app_name">MesaNews</string>

    <!-- region actions -->
    <string name="action_name">Nome</string>
    <string name="action_email">E-mail</string>
    <string name="action_password">Senha</string>
    <string name="action_confirm_password">Confirmar senha</string>
    <string name="action_signin">Entrar</string>
    <string name="action_signup">Cadastrar</string>
    <!-- endregion actions -->

    <!-- region sign in -->
    <string name="singin_email">Entrar com e-mail</string>
    <string name="singin_dont_have_account">Não tenho conta. Cadastrar</string>
    <!-- endregion signin -->
    
    <!-- region home -->
    <string name="home_title">Mesa News</string>
    <string name="home_filter">Filtrar</string>
    <string name="home_highlights">Destaques</string>
    <string name="home_latest_news">Últimas notícias</string>
    <string name="home_signout">Sair</string>
    <!-- endregion home -->

</resources>